--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "buffer": "^6.0.3"
   },
   "peerDependencies": {
-    "react": "17.0.2",
+    "react": "^17.0.2 || ^18.0.0",
     "react-native": "0.64.2"
   },
   "directories": {
